--- a/src/SerialLoops/Views/Panels/EditorTabsPanel.axaml
+++ b/src/SerialLoops/Views/Panels/EditorTabsPanel.axaml
@@ -9,35 +9,61 @@
              xmlns:editors="using:SerialLoops.ViewModels.Editors"
              xmlns:utility="using:SerialLoops.Utility"
              xmlns:tab="using:Tabalonia.Controls"
+             xmlns:assets="using:SerialLoops.Assets"
              x:DataType="vm:EditorTabsPanelViewModel"
              x:Class="SerialLoops.Views.Panels.EditorTabsPanel">
     <UserControl.Resources>
         <utility:DisplayNameConverter x:Key="DisplayNameConverter"/>
     </UserControl.Resources>
 
-    <tab:TabsControl Name="Tabs" ShowDefaultAddButton="False" ItemsSource="{Binding Tabs}"
-                     ContainerClearing="Tabs_ContainerClearing"
-                     SelectedItem="{Binding SelectedTab}" LastTabClosedAction="{x:Null}"
-                     LeftThumbWidth="4" RightThumbWidth="4">
-        <i:Interaction.Behaviors>
-            <ia:EventTriggerBehavior EventName="SelectionChanged" SourceObject="{Binding #Tabs}">
-                <ia:InvokeCommandAction Command="{Binding TabSwitchedCommand}"/>
-            </ia:EventTriggerBehavior>
-        </i:Interaction.Behaviors>
-        <tab:TabsControl.ItemTemplate>
-            <DataTemplate DataType="editors:EditorViewModel">
-                <StackPanel Orientation="Horizontal" Spacing="3" Name="TabHeader">
-                    <Svg Path="{Binding Description.Type, StringFormat='avares://SerialLoops/Assets/Icons/{0}.svg'}" Width="18"/>
-                    <TextBlock FontSize="14" Padding="0 1 8 1">
-                        <TextBlock.Text>
-                            <MultiBinding Converter="{StaticResource DisplayNameConverter}">
-                                <Binding Path="Description.DisplayName"/>
-                                <Binding Path="Description.UnsavedChanges"/>
-                            </MultiBinding>
-                        </TextBlock.Text>
-                    </TextBlock>
-                </StackPanel>
-            </DataTemplate>
-        </tab:TabsControl.ItemTemplate>
-    </tab:TabsControl>
+    <Grid>
+        <tab:TabsControl Name="Tabs" ShowDefaultAddButton="False" ItemsSource="{Binding Tabs}"
+                         ContainerClearing="Tabs_ContainerClearing" IsVisible="{Binding ShowTabsPanel}"
+                         SelectedItem="{Binding SelectedTab}" LastTabClosedAction="{x:Null}"
+                         LeftThumbWidth="4" RightThumbWidth="4" Grid.Row="0" Grid.Column="0" Margin="0 8 0 0">
+            <i:Interaction.Behaviors>
+                <ia:EventTriggerBehavior EventName="SelectionChanged" SourceObject="{Binding #Tabs}">
+                    <ia:InvokeCommandAction Command="{Binding TabSwitchedCommand}"/>
+                </ia:EventTriggerBehavior>
+            </i:Interaction.Behaviors>
+            <tab:TabsControl.ItemTemplate>
+                <DataTemplate DataType="editors:EditorViewModel">
+                    <StackPanel Orientation="Horizontal" Spacing="3" Name="TabHeader">
+                        <Svg Path="{Binding Description.Type, StringFormat='avares://SerialLoops/Assets/Icons/{0}.svg'}" Width="18"/>
+                        <TextBlock FontSize="14" Padding="0 1 8 1">
+                            <TextBlock.Text>
+                                <MultiBinding Converter="{StaticResource DisplayNameConverter}">
+                                    <Binding Path="Description.DisplayName"/>
+                                    <Binding Path="Description.UnsavedChanges"/>
+                                </MultiBinding>
+                            </TextBlock.Text>
+                        </TextBlock>
+                    </StackPanel>
+                </DataTemplate>
+            </tab:TabsControl.ItemTemplate>
+        </tab:TabsControl>
+
+        <!-- When no tabs are open -->
+        <StackPanel IsVisible="{Binding !ShowTabsPanel}" Spacing="20"
+                    Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Image Source="{DynamicResource ColoredIconPath}" Opacity="0.65" Width="250" Height="250" />
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="7">
+                <TextBlock Classes="secondary" Text="{x:Static assets:Strings.Open_an_item_using_the_explorer_to_start_editing_}" />
+                <Grid ColumnDefinitions="Auto,*" RowDefinitions="Auto,Auto" HorizontalAlignment="Center">
+                    <TextBlock Margin="5 3" Grid.Column="0" Grid.Row="0" Classes="secondary" HorizontalAlignment="Right" Text="{x:Static assets:Strings.Save_Project}" />
+                    <StackPanel Margin="5 3" Grid.Column="1" Grid.Row="0" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="4">
+                        <TextBlock Classes="keyprompt" Text="CTRL" />
+                        <TextBlock Classes="secondary" Text="+" />
+                        <TextBlock Classes="keyprompt" Text="S" />
+                    </StackPanel>
+                    <TextBlock Margin="5 3" Grid.Column="0" Grid.Row="1" Classes="secondary"  HorizontalAlignment="Right" Text="{x:Static assets:Strings.Search_Project}" />
+                    <StackPanel Margin="5 3" Grid.Column="1" Grid.Row="1" Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center" Spacing="4">
+                        <TextBlock Classes="keyprompt" Text="CTRL" />
+                        <TextBlock Classes="secondary" Text="+" />
+                        <TextBlock Classes="keyprompt" Text="F" />
+                    </StackPanel>
+                </Grid>
+            </StackPanel>
+        </StackPanel>
+    </Grid>
 </UserControl>
