--- a/src/SerialLoops/Views/Dialogs/ProgressDialog.axaml
+++ b/src/SerialLoops/Views/Dialogs/ProgressDialog.axaml
@@ -3,21 +3,14 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:vm="using:SerialLoops.ViewModels.Dialogs"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:i="using:Avalonia.Xaml.Interactivity"
-        xmlns:ia="using:Avalonia.Xaml.Interactions.Core"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:DataType="vm:ProgressDialogViewModel"
         x:Class="SerialLoops.Views.Dialogs.ProgressDialog"
         Title="{Binding Title}"
         MinWidth="350" MinHeight="100" MaxWidth="350" MaxHeight="100" CanResize="False"
         WindowStartupLocation="CenterScreen" Background="Transparent"
-        Closing="Window_OnClosing"
+        Closing="Window_OnClosing" Loaded="Window_OnLoaded"
         Name="Dialog">
-    <i:Interaction.Behaviors>
-        <ia:EventTriggerBehavior EventName="Initialized" SourceObject="{Binding #Dialog}">
-            <ia:InvokeCommandAction Command="{Binding InitializedCommand}"/>
-        </ia:EventTriggerBehavior>
-    </i:Interaction.Behaviors>
 
     <Panel>
         <ExperimentalAcrylicBorder IsHitTestVisible="False">
