--- a/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
+++ b/src/SerialLoops/Views/Editors/VoicedLineEditorView.axaml
@@ -46,10 +46,10 @@
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Center" Spacing="3">
                         <TextBlock Text="{x:Static assets:Strings.Screen_Position}"/>
                         <StackPanel Orientation="Vertical" Spacing="2">
-                            <RadioButton GroupName="YPos" IsChecked="{Binding TopY}" Content="{x:Static assets:Strings.Top}"/>
-                            <RadioButton GroupName="YPos" IsChecked="{Binding BelowTopY}" Content="{x:Static assets:Strings.Below_Top}"/>
-                            <RadioButton GroupName="YPos" IsChecked="{Binding AboveBottomY}" Content="{x:Static assets:Strings.Above_Bottom}"/>
-                            <RadioButton GroupName="YPos" IsChecked="{Binding BottomY}" Content="{x:Static assets:Strings.Bottom}"/>
+                            <RadioButton GroupName="YPos"  IsChecked="{Binding TopY, Mode=TwoWay}" Content="{x:Static assets:Strings.Top}"/>
+                            <RadioButton GroupName="YPos" IsChecked="{Binding BelowTopY, Mode=TwoWay}" Content="{x:Static assets:Strings.Below_Top}"/>
+                            <RadioButton GroupName="YPos" IsChecked="{Binding AboveBottomY, Mode=TwoWay}" Content="{x:Static assets:Strings.Above_Bottom}"/>
+                            <RadioButton GroupName="YPos" IsChecked="{Binding BottomY, Mode=TwoWay}" Content="{x:Static assets:Strings.Bottom}"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
