--- a/src/SerialLoops/Views/MainWindow.axaml
+++ b/src/SerialLoops/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:SerialLoops.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:controls="using:SerialLoops.Controls"
         xmlns:toolbar="using:MiniToolbar.Avalonia"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="SerialLoops.Views.MainWindow"
@@ -31,24 +32,7 @@
     </NativeMenu.Menu>
 
     <Panel>
-        <OnPlatform>
-            <OnPlatform.Default>
-                <ExperimentalAcrylicBorder IsHitTestVisible="False" >
-                    <ExperimentalAcrylicBorder.Material>
-                        <ExperimentalAcrylicMaterial
-                            BackgroundSource="Digger"
-                            TintColor="{DynamicResource BackgroundTint}"
-                            FallbackColor="{DynamicResource BackgroundTint}"
-                            TintOpacity="{DynamicResource BackgroundAcrylicTintStrength}"
-                            MaterialOpacity="{DynamicResource BackgroundAcrylicOpacity}" />
-                    </ExperimentalAcrylicBorder.Material>
-                </ExperimentalAcrylicBorder>
-            </OnPlatform.Default>
-            <OnPlatform.Linux>
-                <Panel IsVisible="False"/>
-            </OnPlatform.Linux>
-        </OnPlatform>
-
+        <controls:AcrylicBorderHandler/>
         <Grid RowDefinitions="Auto,*">
             <StackPanel IsVisible="False">
                 <Button Command="{Binding SaveProjectCommand}" HotKey="{Binding SaveHotKey}"/>
